@@ -14,11 +14,13 @@ INCLUDES = -I.. -I$(srcdir)/.. -I$(includedir)	\
 libcamelmh_la_SOURCES = 			\
 	camel-mh-folder.c			\
 	camel-mh-provider.c			\
-	camel-mh-store.c
+	camel-mh-store.c			\
+	mh-uid.c
 
 libcamelmhinclude_HEADERS =			\
 	camel-mh-folder.h			\
-	camel-mh-store.h
+	camel-mh-store.h\
+	mh-uid.h
 
 
 libcamelmh_la_LDFLAGS = -version-info 0:0:0 -rpath $(libdir)
